# pixelization_rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  _ros_build.bash  build.sh  docker_entrypoint.sh  nvidia_run_dev.sh  package.xml  run.sh  run_dev.sh  setup.sh
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml
docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/doc/action_msgs/: all.html  index.html
docs/doc/addr2line/: enum.LookupResult.html  struct.Context.html  struct.Frame.html  struct.FrameIter.html  struct.FunctionName.html  struct.Location.html  struct.LocationRangeIter.html  struct.SplitDwarfLoad.html
docs/doc/adler/: struct.Adler32.html
docs/doc/anstream/: enum.ColorChoice.html  struct.AutoStream.html  struct.StripStream.html
docs/doc/anstyle/: enum.AnsiColor.html  enum.Color.html  struct.Ansi256Color.html  struct.EffectIter.html  struct.Effects.html  struct.Reset.html  struct.RgbColor.html  struct.Style.html
docs/doc/anstyle_parse/: struct.AsciiParser.html  struct.Params.html  struct.ParamsIter.html  struct.Parser.html  struct.Utf8Parser.html
docs/doc/anyhow/: struct.Chain.html  struct.Error.html
docs/doc/approx/: struct.AbsDiff.html  struct.Relative.html  struct.Ulps.html
docs/doc/backtrace/: enum.BytesOrWideString.html  enum.PrintFmt.html  struct.Backtrace.html  struct.BacktraceFmt.html  struct.BacktraceFrame.html  struct.BacktraceFrameFmt.html  struct.BacktraceSymbol.html  struct.Frame.html  struct.Symbol.html  struct.SymbolName.html
docs/doc/builtin_interfaces/: all.html  index.html
docs/doc/bytemuck/: enum.PodCastError.html  trait.Pod.html  trait.Zeroable.html
docs/doc/bytes/: struct.Bytes.html  struct.BytesMut.html
docs/doc/chrono/: enum.Month.html  enum.Weekday.html  struct.Date.html  struct.DateTime.html  struct.Days.html  struct.FixedOffset.html  struct.Local.html  struct.Months.html  struct.NaiveDate.html  struct.NaiveDateTime.html  struct.NaiveTime.html  struct.OutOfRange.html  struct.TimeDelta.html  struct.Utc.html
docs/doc/clap/: enum.ArgAction.html  enum.ColorChoice.html  enum.ValueHint.html  struct.Arg.html  struct.ArgGroup.html  struct.ArgMatches.html  struct.Command.html  struct.Id.html
docs/doc/clap_builder/: enum.ColorChoice.html  struct.Id.html
docs/doc/clap_lex/: enum.SeekFrom.html  struct.ArgCursor.html  struct.ParsedArg.html  struct.RawArgs.html  struct.ShortFlags.html
docs/doc/colorchoice/: enum.ColorChoice.html
docs/doc/futures_executor/: struct.BlockingStream.html  struct.Enter.html  struct.EnterError.html  struct.LocalPool.html  struct.LocalSpawner.html
docs/doc/futures_task/: struct.FutureObj.html  struct.LocalFutureObj.html  struct.SpawnError.html  struct.WakerRef.html
docs/doc/geometry_msgs/: all.html  index.html
docs/doc/gimli/: enum.DwarfFileType.html  enum.Format.html  enum.RunTimeEndian.html  enum.SectionId.html  enum.UnitSectionOffset.html  enum.Vendor.html  struct.AArch64.html  (+36 more)
docs/localizer/: fn.main.html  sidebar-items.js  struct.LocalizerNode.html
docs/network_node/: all.html  fn.main.html  index.html  sidebar-items.js  type.Result.html
install/: local_setup.sh  setup.sh
launch/: run.launch.py  run_no_comms.launch.py
log/: latest_build
ros2_logger/: Cargo.toml
ros2_logger/src/: lib.rs
src/: angle_util.rs  april_tags.rs  error.rs  kalman_filter.rs  main.rs  node.rs  pose.rs  udp_server.rs  util.rs
src/localizer/: main.rs  positions.rs  util.rs
src/network_node/: error.rs  main.rs  node.rs  udp_server.rs
src/task/: april_tags.rs  mod.rs  ping.rs  server.rs
(+13530 files in other folders)
