[package]
name = "pixelization_rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }

[dependencies.rclrs]
version = "0.4"

[dependencies.rosidl_runtime_rs]
version = "0.4"

[dependencies.std_msgs]
version = "*"

[dependencies.nav_msgs]
version = "*"

[dependencies.geometry_msgs]
version = "*"

[dependencies.vision_msgs]
version = "*"

[package.metadata.ros]
install_to_share = ["launch"]
