[package]
name = "pixelization_rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "network_node"
path = "src/network_node/main.rs"

[[bin]]
name = "localizer"
path = "src/localizer/main.rs"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
log = "0.4"
ros2_logger = { git = "https://github.com/Pixelators4014/ros2_logger.git", branch = "main" }
nalgebra = "*"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
thiserror = "1.0"

[dependencies.rclrs]
version = "0.4"

[dependencies.rosidl_runtime_rs]
version = "0.4"

[dependencies.std_msgs]
version = "*"

[dependencies.nav_msgs]
version = "*"

[dependencies.geometry_msgs]
version = "*"

[dependencies.isaac_ros_apriltag_interfaces]
version = "*"

[dependencies.isaac_ros_visual_slam_interfaces]
version = "*"

[package.metadata.ros]
install_to_share = ["launch"]

[features]
default = []
kalman = []
object-detection = []
