<?xml version="1.0"?>
<?xml-model
        href="http://download.ros.org/schema/package_format3.xsd"
        schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>pixelization_rs</name>
    <version>0.1.0</version>
    <description>FRC + ROS2, but Rust 0_0.</description>
    <maintainer email="arihant2math@gmail.com">Ashwin Naren</maintainer>
    <license>MIT License</license>

    <build_depend>builtin_interfaces</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>rcl_interfaces</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>vision_msgs</build_depend>
    <build_depend>action_msgs</build_depend>
    <build_depend>isaac_ros_apriltag_interfaces</build_depend>
    <build_depend>isaac_ros_visual_slam_interfaces</build_depend>

    <depend>rclrs</depend>
    <depend>rosidl_runtime_rs</depend>

    <export>
        <build_type>ament_cargo</build_type>
    </export>
</package>